--- a/src/app/admin/listar/listar.component.html
+++ b/src/app/admin/listar/listar.component.html
@@ -1,5 +1,5 @@
 <div class="tituloListas">
-  <h1>Lista de produtos</h1>
+  <h1>Lista de Passagens</h1>
   <button class="btnMyFoodLista" routerLink="/admin/passagens/incluir" color="primary">Incluir</button>
 </div>
 <table mat-table [dataSource]="produtos" >
