--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
 <h3>Menu Secundário</h3>
 
 <ul>
-    <li><a routerLink="/admin/passagens">Produtos</a></li>
+    <li><a routerLink="/admin/passagens">Passagens</a></li>
 </ul>
 
 <router-outlet></router-outlet>
