--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -87,11 +87,9 @@
   width: 200px;
   height: 400px;
   background: rgba(255, 255, 255, 0.8);
-  padding: 20px 30px 20px 30px;
-  border-radius: 10px;
-  border-left: 1px solid black;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  padding: 20px 30px 20px 50px;
+  border-top-left-radius: 20%;
+  border-bottom-left-radius: 20%;
 }
 
 .titulo-atributos {
