--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,25 +71,27 @@
 .atributos-teste {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  width: 60%;
-  height: auto;
+  justify-content: flex-start;
   margin-bottom: 3%;
+  position: relative;
 }
 
 .imagem-atributos {
-  width: 800px;
+  width: 100%;
   border: 1px solid rgb(0, 0, 0, 0.3);
 }
 
 .texto-atributos {
-  position: absolute;
   width: 200px;
-  height: 400px;
+  height: 300px;
   background: rgba(255, 255, 255, 0.8);
-  padding: 20px 30px 20px 50px;
+  padding: 20px 30px 40px 50px;
   border-top-left-radius: 20%;
   border-bottom-left-radius: 20%;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 0;
 }
 
 .titulo-atributos {
@@ -100,6 +102,7 @@
 
 .descricao-atributos {
   font-family: "Ubuntu", sans-serif;
-  line-height: 1.8;
+  line-height: 1.3;
   font-size: 16px;
+  text-align: justify;
 }
