--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <a [routerLink]="''"><img src="/../assets/image/goTrip-logo.png" alt="logo goTrip"></a>
             <app-nav></app-nav>
         </div>
-        <div class="head-container">
+        <!-- <div class="head-container">
             <div class="passagem-1">
                 <h2>Passagens Aéreas</h2>
                 <div class="botao-dir">
@@ -77,6 +77,6 @@
                     <button class="botao-buscar">Buscar</button>
                 </div>
             </div>
-        </div>    
+        </div>     -->
     </div>
 </body>
