--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,4 @@
-.geral {
-    background: rgb(125, 150, 14);
-}
+.geral {}
 
 .cabeca-1 {
     display: flex;
@@ -8,23 +6,27 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 10rem;
-    border: 0.5px solid rgba(0, 0, 0, 0.4);
-    background: rgb(220, 220, 220);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-right: 0;
+    background: rgb(200, 200, 200);
 }
 
 img {
-    margin-top: 10px;
+    margin-top: 0px;
     margin-left: 10px;
-    width: 140px;
+    width: 120px;
+    height: auto;
 }
 
 .head-container {
+    background: rgb(125, 150, 14);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
     padding: 0 1rem;
+    width: 100%;
 }
 
 .passagem-1 {
