--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(230, 230, 230);
+}
+
 .guia-destinos {
   display: flex;
   align-items: center;
@@ -14,7 +18,7 @@
 }
 
 .texto-banner {
-  background-color: rgb(125, 150, 14);
+  background-color: rgb(14, 125, 150);
   padding: 20px;
   margin: 0 10px;
   width: 300px;
@@ -36,11 +40,10 @@
 }
 
 .banner-produto {
-  background: rgb(125, 150, 14);
+  background: rgb(10, 88, 105);
   color: rgb(255, 255, 255);
   border-radius: 10px;
-  margin: 0 10px;
-  border: 1px solid rgb(0, 0, 0, 0.3);
+  margin: 20px 10px;
 }
 
 .imagem-banner {
@@ -97,12 +100,13 @@
 .titulo-atributos {
   font-size: 22px;
   font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .descricao-atributos {
   font-family: "Ubuntu", sans-serif;
   line-height: 1.3;
   font-size: 16px;
+  font-weight: 500;
   text-align: justify;
 }
