--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,10 @@
-<p>Pagina Administrador</p>
+<h2 class="titulo-admin">Seja bem vindo, Admin!</h2>
 
-<h3>Menu Secundário</h3>
-
-<ul>
-    <li><a routerLink="/admin/passagens">Passagens</a></li>
+<h3 class="titulo-menu">Menu</h3>
+<ul class="menu-list">
+    <li class="menu-item"><a class="menu-link" routerLink="/admin/passagens"><mat-icon class="material-icons-outlined">
+        airplane_ticket
+    </mat-icon>Passagens</a></li>
 </ul>
 
 <router-outlet></router-outlet>
