--- a/src/app/admin/listar/listar.component.html
+++ b/src/app/admin/listar/listar.component.html
@@ -1,45 +1,51 @@
 <div class="tituloListas">
-  <h1>Lista de Passagens</h1>
-  <button class="btnMyFoodLista" routerLink="/admin/passagens/incluir" color="primary">Incluir</button>
+  <h1 class="titulo-principal">Lista de Passagens</h1>
+  <button class="btnIncluir" routerLink="/admin/passagens/incluir" color="primary"><mat-icon class="material-icons-outlined">
+    add_circle_outline
+  </mat-icon></button>
 </div>
-<table mat-table [dataSource]="produtos" >
+<table class="tabela-passagens" mat-table [dataSource]="produtos" >
 
 <ng-container matColumnDef="id">
-  <th mat-header-cell *matHeaderCellDef> ID </th>
-  <td mat-cell *matCellDef="let produto"> {{produto.id}} </td>
+  <th class="container-titulo" mat-header-cell *matHeaderCellDef> ID </th>
+  <td class="container-texto" mat-cell *matCellDef="let produto"> {{produto.id}} </td>
 </ng-container>
 
 <ng-container matColumnDef="origem">
-  <th mat-header-cell *matHeaderCellDef> Origem </th>
-  <td mat-cell *matCellDef="let produto"> {{produto.origem}} </td>
+  <th class="container-titulo" mat-header-cell *matHeaderCellDef> Origem </th>
+  <td class="container-texto" mat-cell *matCellDef="let produto"> {{produto.origem}} </td>
 </ng-container>
 
 <ng-container matColumnDef="destino">
-  <th mat-header-cell *matHeaderCellDef> Destino </th>
-  <td mat-cell *matCellDef="let produto"> {{produto.destino}} </td>
+  <th class="container-titulo" mat-header-cell *matHeaderCellDef> Destino </th>
+  <td class="container-texto" mat-cell *matCellDef="let produto"> {{produto.destino}} </td>
 </ng-container>
 
 <ng-container matColumnDef="data">
-  <th mat-header-cell *matHeaderCellDef> Data </th>
-  <td mat-cell *matCellDef="let produto"> {{produto.data}} </td>
+  <th class="container-titulo" mat-header-cell *matHeaderCellDef> Data </th>
+  <td class="container-texto" mat-cell *matCellDef="let produto"> {{produto.data}} </td>
 </ng-container>
 
 <ng-container matColumnDef="preco">
-  <th mat-header-cell *matHeaderCellDef> Preço </th>
-  <td mat-cell *matCellDef="let produto"> {{produto.preco}} </td>
+  <th class="container-titulo" mat-header-cell *matHeaderCellDef> Preço </th>
+  <td class="container-texto" mat-cell *matCellDef="let produto"> {{produto.preco}} </td>
 </ng-container>
 
 <ng-container matColumnDef="taxas">
-  <th mat-header-cell *matHeaderCellDef> Taxas </th>
-  <td mat-cell *matCellDef="let produto"> {{produto.taxas}} </td>
+  <th class="container-titulo" mat-header-cell *matHeaderCellDef> Taxas </th>
+  <td class="container-texto" mat-cell *matCellDef="let produto"> {{produto.taxas}} </td>
 </ng-container>
 
 
 <ng-container matColumnDef="acoes">
-  <th mat-header-cell *matHeaderCellDef style="text-align: center; padding-right: 35px"> Ações </th>
+  <th class="container-titulo" mat-header-cell *matHeaderCellDef style="text-align: center; padding-right: 35px"> Ações </th>
   <td class="ultima-coluna" mat-cell *matCellDef="let produto">
-    <a routerLink="/admin/passagens/atualizar/{{ produto.id }}">Editar</a>
-    <a routerLink="/admin/passagens/excluir/{{ produto.id }}">Excluir</a>
+    <a class="btnEditar" routerLink="/admin/passagens/atualizar/{{ produto.id }}"><mat-icon class="material-icons-outlined">
+      edit
+    </mat-icon></a>
+    <a class="btnExcluir" routerLink="/admin/passagens/excluir/{{ produto.id }}"><mat-icon class="material-icons-outlined">
+      clear
+    </mat-icon></a>
   </td>
 </ng-container>
 
