--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -12,7 +12,7 @@
     align-items: center;
     margin-top: 30px;
     margin-bottom: 60px;
-    background: rgb(125, 150, 14);
+    background: rgb(10, 88, 105);
     padding: 20px 0;
     width: 400px;
     border-radius: 20px;
@@ -31,6 +31,7 @@
     font-weight: 500;
     font-family: "Ubuntu", sans-serif;
     color: white;
+    padding: 15px 0;
 }
 
 .titulo-login {
@@ -43,12 +44,12 @@
 }
 
 .botao-olho {
-    background: rgb(125, 150, 14);
+    background: rgb(10, 88, 105);
     border: none;
 }
 
 .icone-olho {
-    background: rgb(125, 150, 14);
+    background: rgb(10, 88, 105);
 }
 
 .botao-login {
@@ -59,7 +60,9 @@
     border-radius: 5px;
     text-transform: uppercase;
     font-size: 12px;
-    font-weight: bold;
+    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 0.1ch;
 }
 
 .login-admin {
@@ -84,6 +87,8 @@
     background: none;
     color: white;
     text-decoration: underline;
+    font-size: 15px;
+    cursor: pointer;
 }
 
 .login-input {
