--- a/src/app/admin/listar/listar.component.html
+++ b/src/app/admin/listar/listar.component.html
@@ -1,7 +1,7 @@
 <div class="tituloListas">
   <h1 class="titulo-principal">Lista de Passagens</h1>
   <button class="btnIncluir" routerLink="/admin/passagens/incluir" color="primary"><mat-icon class="material-icons-outlined">
-    add_circle_outline
+    add
   </mat-icon></button>
 </div>
 <table class="tabela-passagens" mat-table [dataSource]="produtos" >
