--- a/src/app/admin/listar/listar.component.css
+++ b/src/app/admin/listar/listar.component.css
@@ -16,6 +16,7 @@
   border: 1px solid black;
   padding: 2px 4px 2px 4px;
   cursor: pointer;
+  border-radius: 100%;
 }
 
 .material-icons-outlined {
