--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -87,7 +87,7 @@ body {
 .texto-atributos {
   width: 200px;
   height: 300px;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(230, 230, 230);
   padding: 20px 30px 40px 50px;
   border-top-left-radius: 20%;
   border-bottom-left-radius: 20%;
