--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -5,8 +5,8 @@
         <div class="botao-dir">
             <p class="botao-escolha">
                 <mat-button-toggle-group class="botao-total" name="fontStyle" aria-label="Font Style">
-                  <mat-button-toggle class="botao-idavolta" value="IdaeVolta">Ida e Volta</mat-button-toggle>
-                  <mat-button-toggle class="botao-ida" value="Ida">Somente Ida</mat-button-toggle>
+                  <mat-button-toggle [ngClass]="[btnStyle]" (click)="clickOnIdaVolta()" class="botao-idavolta" value="IdaeVolta">Ida e Volta</mat-button-toggle>
+                  <mat-button-toggle (click)="clickOnIda()" class="botao-ida" value="Ida">Somente Ida</mat-button-toggle>
                 </mat-button-toggle-group>
             </p>
         </div>
@@ -60,7 +60,7 @@
                     <mat-datepicker class="data-line" #picker></mat-datepicker>
                 </mat-form-field>
             </div>
-            <div class="data-volta">
+            <div class="data-volta" *ngIf="isIdaVolta" >
                 <p>Volta</p>
                 <mat-form-field class="data-2">
                     <mat-label class="data-text">Escolha uma data</mat-label>
