--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,5 +19,45 @@
                 <p class="descricao-atributos">Na goTrip você encontra as melhores opções e vantagens para sua viagem, verifique os melhores preços e tenha uma ótima experiencia. Confira as regiões das cidades de Curitiba, São Paulo e Rio de Janeiro por preços baixissimos e com o melhor atendimento. </p>
             </div>
     </div>
+    <div class="info-container">
+        <div class="info-container__covid">
+            <img src="../../assets/image/foto-mascara.png" class="foto-mascara" alt="foto-mascara-covid">
+            <div class="caixa-texto__covid" id="caixa-covid">
+                <h3 class="titulo-covid">
+                    Covid-19
+                </h3>
+                <p class="texto-covid">
+                    Para o seu bem estar e o do próximo, exigimos o uso de mascara em certas etapas de nossas viagens, também é necessario que tenha em seu porte um comprovante de vacinação contra a covid-19.
+                </p>
+                 <a class="link-mais" href="#caixa-covid"><p class="botao-mais"> Saiba mais <mat-icon class="material-symbols-outlined">
+                    chevron_right
+                </mat-icon> </p> </a>
+            </div>
+        </div>
+        <div class="info-container__bagagem">
+            <div class="caixa-texto__bagagem" id="caixa-bagagem">
+                <h3 class="titulo-bagagem">
+                    Bagagens
+                </h3>
+                <p class="texto-bagagem">
+                    Para o seu bem estar e o do próximo, exigimos o uso de mascara em certas etapas de nossas viagens, também é necessario que tenha em seu porte um comprovante de vacinação contra a covid-19.
+                </p>
+                <a class="link-mais" href="#caixa-bagagem"><p class="botao-mais"> Saiba mais <mat-icon class="material-symbols-outlined">
+                    chevron_right
+                </mat-icon> </p> </a>
+            </div>
+            <img src="../../assets/image/foto-bagagem.png" alt="foto-mascara-covid">
+        </div>
+    </div>
+    </div>
+    <div class="teste-news">
+        <div class="container-news">
+            <h2 class="titulo-news"> Inscreva-se para receber ofertas exclusivas!</h2>
+            <div class="cadastro-news">
+                <input class="input-nome" type="text" placeholder="Nome">
+                <input class="input-email" type="email" placeholder="Insira seu e-mail">
+                <button class="botao-enviar">Enviar</button>
+            </div>
+        </div>
     </div>
 </body>
