--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -24,9 +24,9 @@
                         matInput
                         [formControl]="myControl"
                         [matAutocomplete]="auto">
-                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                    {{option}}
+                        <mat-autocomplete #auto="matAutocomplete">
+                            <mat-option *ngFor="let option of options" [value]="option">
+                              {{option}}
                     </mat-option>
                 </mat-autocomplete>
                 </mat-form-field>
