--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(255, 255, 255);
 }
 
 .guia-destinos {
@@ -70,6 +70,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 160px;
 }
 
 .atributos-teste {
@@ -88,7 +89,7 @@ body {
 .texto-atributos {
   width: 200px;
   height: 300px;
-  background: rgba(230, 230, 230);
+  background: rgba(255, 255, 255);
   padding: 20px 30px 40px 50px;
   border-top-left-radius: 20%;
   border-bottom-left-radius: 20%;
